feat: reduce egress cost from using public bucket endpoint

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,9 @@ UMAMI_ANALYTICS_ID=
 
 # file storage
 S3_ENDPOINT=localhost
+S3_PUBLIC_ENDPOINT=
 S3_PORT=9000
+S3_PUBLIC_PORT=443
 S3_USE_SSL=false
 S3_ACCESS_KEY=minio
 S3_SECRET_KEY=miniosecret
