--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "lucide-react": "^0.542.0",
     "minio": "^8.0.5",
     "nanoid": "^5.1.5",
-    "next": "15.5.2",
+    "next": "16.0.3",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "pg": "^8.16.3",
@@ -76,8 +76,8 @@
     "pino": "^9.9.1",
     "pino-pretty": "^13.1.1",
     "rate-limiter-flexible": "^7.3.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.5",
     "replicate": "^1.1.0",
@@ -90,14 +90,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@next/bundle-analyzer": "^15.5.2",
+    "@next/bundle-analyzer": "16.0.3",
     "@react-email/preview-server": "^4.2.8",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query-devtools": "^5.87.1",
     "@types/node": "^20",
     "@types/pg": "^8.15.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3",
     "csv-parse": "^6.1.0",
     "csv-stringify": "^6.6.0",
     "drizzle-kit": "^0.31.4",
@@ -108,5 +108,11 @@
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.5",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
