--- a/package.json
+++ b/package.json
@@ -22,92 +22,93 @@
     "email:dev": "email dev --port 3001 --dir src/components/emails"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.879.0",
-    "@hookform/resolvers": "^5.2.1",
+    "@aws-sdk/client-ses": "^3.946.0",
+    "@hookform/resolvers": "^5.2.2",
     "@magenta/music": "^1.23.1",
-    "@marsidev/react-turnstile": "^1.3.0",
+    "@marsidev/react-turnstile": "^1.3.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.203.0",
     "@opentelemetry/auto-instrumentations-node": "^0.62.2",
     "@opentelemetry/exporter-trace-otlp-http": "^0.204.0",
-    "@opentelemetry/resources": "^2.1.0",
+    "@opentelemetry/resources": "^2.2.0",
     "@opentelemetry/sdk-node": "^0.204.0",
-    "@opentelemetry/sdk-trace-node": "^2.1.0",
-    "@opentelemetry/semantic-conventions": "^1.37.0",
-    "@orpc/client": "^1.8.6",
-    "@orpc/otel": "^1.8.6",
-    "@orpc/react-query": "^1.8.6",
-    "@orpc/server": "^1.8.6",
-    "@orpc/tanstack-query": "^1.8.6",
+    "@opentelemetry/sdk-trace-node": "^2.2.0",
+    "@opentelemetry/semantic-conventions": "^1.38.0",
+    "@orpc/client": "^1.12.2",
+    "@orpc/otel": "^1.12.2",
+    "@orpc/react-query": "^1.12.2",
+    "@orpc/server": "^1.12.2",
+    "@orpc/tanstack-query": "^1.12.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@react-email/components": "^0.5.1",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@react-email/components": "^0.5.7",
     "@t3-oss/env-nextjs": "^0.13.8",
-    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.3",
-    "better-auth": "^1.3.7",
+    "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.5",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
-    "framer-motion": "^12.23.12",
+    "eslint-config-next": "^16.0.7",
+    "framer-motion": "^12.23.25",
     "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
-    "minio": "^8.0.5",
-    "nanoid": "^5.1.5",
-    "next": "16.0.3",
+    "minio": "^8.0.6",
+    "nanoid": "^5.1.6",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
-    "nextjs-toploader": "^3.8.16",
+    "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
     "pg-native": "^3.5.2",
-    "pino": "^9.9.1",
-    "pino-pretty": "^13.1.1",
-    "rate-limiter-flexible": "^7.3.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.62.0",
-    "react-resizable-panels": "^3.0.5",
-    "replicate": "^1.1.0",
+    "pino": "^9.14.0",
+    "pino-pretty": "^13.1.3",
+    "rate-limiter-flexible": "^7.4.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
+    "react-resizable-panels": "^3.0.6",
+    "replicate": "^1.4.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.4.0",
     "tone": "14.7.77",
     "waveform-playlist": "^4.3.3",
-    "zod": "^4.1.4"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@next/bundle-analyzer": "16.0.3",
-    "@react-email/preview-server": "^4.2.8",
-    "@tailwindcss/postcss": "^4.1.13",
-    "@tanstack/react-query-devtools": "^5.87.1",
-    "@types/node": "^20",
-    "@types/pg": "^8.15.5",
+    "@react-email/preview-server": "^4.3.2",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "@types/node": "^20.19.25",
+    "@types/pg": "^8.15.6",
     "@types/react": "19.2.5",
     "@types/react-dom": "19.2.3",
     "csv-parse": "^6.1.0",
     "csv-stringify": "^6.6.0",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.31.8",
     "jiti": "^1.21.7",
     "localtunnel": "^2.0.2",
-    "react-email": "^4.2.8",
-    "tailwindcss": "^4.1.13",
-    "tsx": "^4.20.5",
-    "tw-animate-css": "^1.3.7",
-    "typescript": "^5"
+    "react-email": "^4.3.2",
+    "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "overrides": {
