--- a/package.json
+++ b/package.json
@@ -63,13 +63,13 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
-    "eslint-config-next": "^16.0.7",
+    "eslint-config-next": "16.0.10",
     "framer-motion": "^12.23.25",
     "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
     "minio": "^8.0.6",
     "nanoid": "^5.1.6",
-    "next": "16.0.7",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
@@ -77,8 +77,8 @@
     "pino": "^9.14.0",
     "pino-pretty": "^13.1.3",
     "rate-limiter-flexible": "^7.4.0",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "replicate": "^1.4.0",
@@ -91,13 +91,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@next/bundle-analyzer": "16.0.3",
+    "@next/bundle-analyzer": "16.0.10",
     "@react-email/preview-server": "^4.3.2",
     "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query-devtools": "^5.91.1",
     "@types/node": "^20.19.25",
     "@types/pg": "^8.15.6",
-    "@types/react": "19.2.5",
+    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "csv-parse": "^6.1.0",
     "csv-stringify": "^6.6.0",
@@ -112,7 +112,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.2.5",
+      "@types/react": "19.2.7",
       "@types/react-dom": "19.2.3"
     }
   }
