--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "@opentelemetry/sdk-trace-node": "^2.2.0",
     "@opentelemetry/semantic-conventions": "^1.38.0",
     "@orpc/client": "^1.12.2",
+    "@orpc/experimental-pino": "^1.13.4",
     "@orpc/otel": "^1.12.2",
     "@orpc/react-query": "^1.12.2",
-    "@orpc/server": "^1.12.2",
+    "@orpc/server": "^1.13.4",
     "@orpc/tanstack-query": "^1.12.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -74,7 +75,7 @@
     "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
     "pg-native": "^3.5.2",
-    "pino": "^9.14.0",
+    "pino": "^10.2.1",
     "pino-pretty": "^13.1.3",
     "rate-limiter-flexible": "^7.4.0",
     "react": "19.2.3",
@@ -90,7 +91,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.0",
+    "@biomejs/biome": "2.3.11",
     "@next/bundle-analyzer": "16.1.4",
     "@react-email/preview-server": "^4.3.2",
     "@tailwindcss/postcss": "^4.1.17",
